# GSD

./: .gitignore  README.md  optimization_results_n_looks_2_large_effect.json  optimization_results_n_looks_3_old_run.json  optimization_results_n_looks_5_old_run.json  optimization_results_n_looks_6_old_run.json  pyproject.toml
gsd/basic_code/: find_best_general_spending.py  find_good_hsd_spending_functions.py  gsd_statistics_calculator.py  gsd_threshold_finder_algorithm_1.py
gsd/basic_code/utils/: bayesian_approximation.py  find_fixed_sample_size.py  spending_function.py
gsd/bayesian_example/: bayesian_example.py
gsd/bayesian_example/section_4_run/: alpha_parameter_vs_beta_parameter.eps  average_sample_size.eps  textual_output.txt
gsd/bayesian_example/section_5_run_results/: scenario_1.json  scenario_10.json  scenario_100.json  scenario_101.json  scenario_102.json  scenario_103.json  scenario_104.json  scenario_105.json  scenario_106.json  scenario_107.json  scenario_108.json  scenario_109.json  scenario_11.json  scenario_110.json  scenario_111.json  scenario_112.json  scenario_113.json  scenario_114.json  scenario_115.json  scenario_116.json  scenario_117.json  (+99 more)
gsd/bayesian_example_output/: alpha_parameter_vs_error_rates.eps  efficacy_stop.eps  futility_stop.eps
gsd/current_figures/: alpha_parameter_vs_beta_parameter.eps  alpha_parameter_vs_error_rates.eps  average_sample_size.eps  efficacy_stop.eps  futility_stop.eps  spending_functions_hsd.eps
gsd/opt_gs_comparison/: compare_with_opt_gs.py
gsd/plot_spending_functions/: spending_functions_hsd.eps
(+10 files in other folders)
